--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -27,6 +27,110 @@
         <li>Math 123</li>
         <li>Communications 101</li>
     </ul>
+    <h1>Education</h1>
+    <style>
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 20px 0;
+        }
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border: 1px solid #ddd;
+        }
+        th {
+            background-color: #f4f4f4;
+        }
+        tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+    </style>
+</head>
+<body>
+    <h3>College of Western Idaho (CWI) Software Development Associate Degree</h3>
+    <h4>First Year: Client-Side Development</h4>
+    <table>
+        <tr>
+            <th>Course Code</th>
+            <th>Course Title</th>
+            <th>Technologies/Tools</th>
+        </tr>
+        <tr>
+            <td>SWDV-105</td>
+            <td>Introduction to Programming</td>
+            <td>C#</td>
+        </tr>
+        <tr>
+            <td>SWDV-110</td>
+            <td>Intermediate Programming</td>
+            <td>C#</td>
+        </tr>
+        <tr>
+            <td>SWDV-115</td>
+            <td>Introduction to Web Application Development</td>
+            <td>HTML5/CSS3, GitHub</td>
+        </tr>
+        <tr>
+            <td>SWDV-141</td>
+            <td>Intermediate Web Application Development</td>
+            <td>JavaScript</td>
+        </tr>
+        <tr>
+            <td>SWDV-265</td>
+            <td>Mobile Development</td>
+            <td>Android Studio</td>
+        </tr>
+        <tr>
+            <td>SWDV-210</td>
+            <td>Introduction to Server Side Programming</td>
+            <td>Python</td>
+        </tr>
+    </table>
+
+    <h4>Second Year: Server-Side Development</h4>
+    <table>
+        <tr>
+            <th>Course Code</th>
+            <th>Course Title</th>
+            <th>Technologies/Tools</th>
+        </tr>
+        <tr>
+            <td>SWDV-152</td>
+            <td>Systems Analysis and Design</td>
+            <td>Agile</td>
+        </tr>
+        <tr>
+            <td>SWDV-220</td>
+            <td>Fundamentals of Database Systems</td>
+            <td>SQL</td>
+        </tr>
+        <tr>
+            <td>SWDV-235</td>
+            <td>Advanced Web Application Development</td>
+            <td>Django</td>
+        </tr>
+        <tr>
+            <td>SWDV-275</td>
+            <td>Software Development Tools and Technology</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>SWDV-278</td>
+            <td>Cloud Platforms and Services</td>
+            <td>AWS, Azure, Google</td>
+        </tr>
+        <tr>
+            <td>SWDV-280</td>
+            <td>Collaborative Development</td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>SWDV-290</td>
+            <td>Software Development Capstone Internship</td>
+            <td></td>
+        </tr>
+    </table>
 </main>
 </body>
 </html>
