--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<!--Abi Cotner
- February 11, 2025-->
- <html lang="en">
-    <head>
-        <title>Home</title>
-        <meta charset="UTF-8">
-  <meta name="keywords" content="C# server-side HTML5 CSS3 client-side">
-  <meta name="viewport" content="width=device-width, initial scale=1.0">
-</head>
+<!-- Abi Cotner
+  February 20, 2025-->
+<html lang="en"> 
+  <head> 
+    <title>Index</title> 
+    <meta name="author" content="Abi Cotner" /> 
+    <meta charset="UTF-8" /> 
+    <meta name="description" content="Abi Cotner software app designer Boise Idaho" /> 
+    <meta name="keywords" content="client-side server-side software developer programmer" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   </head> 
 <body>
     <header>
         <nav>
