--- a/portfolio/experience.html
+++ b/portfolio/experience.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Abi Cotner software app designer Boise Idaho" /> 
     <meta name="keywords" content="client-side server-side software developer programmer" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/tableStyles.css" />
    </head> 
 <body>
     <header>
