--- a/CityFarmer/cf_index.html
+++ b/CityFarmer/cf_index.html
@@ -8,7 +8,7 @@ March 3, 2025 -->
     <meta name="keywords" content="gardening blog, home grown, fruits, vegetables">
     <meta name="author" content="Abi Cotner & Luke ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="css/cf_styles.css"/>
+	<link rel="stylesheet" href="css/cf_styles.css">
 	<title>City Farmer</title>
 </head>
 <body>
@@ -40,11 +40,11 @@ March 3, 2025 -->
 	</main>
 	<footer>
 		<a href = "https://www.twitter.com" target="_blank">
-			<img src = "image/twitter.png">
+			<img src = "image/twitter.png" alt="Bird logo for social media app Twitter">
 		</a>
 		&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 		<a href = "https://www.instagram.com" target="_blank">
-			<img src = "image/insta.png">
+			<img src = "image/insta.png" alt="Camera logo for social media app Instagram">
 		</a>
 		<p> Contact us at <a href = "mailto:feedback@cityfarmer.com">feedback@cityfarmer.com</a><br>
 		    &copy; Copyright 2019 
@@ -53,5 +53,3 @@ March 3, 2025 -->
 </div>
 </body>
 </html>
-
-
